add experimenter_url to serialized Experiment output
- fixes experiment registration
- should switch to DRF at some point, much better API generation tools

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -152,7 +152,7 @@
                 window.location = url;
             };
             model.controllerUrl = function(experimentModel, urlAction) {
-                return experimentModel.controller_url() + "/" + urlAction;
+                return experimentModel.url() + "/" + urlAction;
             };
             function pendingExperimentCallback(data) {
                 if (data.success) {
